--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -6,7 +6,7 @@
     background-color: none;
     padding: 7px 0px;
     z-index: 1000;
-    transition: padding 0.3s ease-in-out, background-color 0.4s linear;
+    transition: padding 0.3s ease-in-out, background-color 0.3s linear;
 }
 .navbar {
     display: flex;
@@ -16,7 +16,7 @@
     max-width: 1100px;
     margin: auto;
     font-family: "Yle Next", sans-serif;
-    padding: 0px 20px;
+    padding: 0px 17px;
     box-sizing: border-box;
     font-size: 15px;
     font-weight: 800;
@@ -60,7 +60,7 @@ p {
 
 .button {
     border-radius: 500px;
-    padding: 8px 16px;
+    padding: 7px 14px;
     background-color: white;
     color: rgb(58, 0, 50);
     text-decoration: none;
@@ -94,4 +94,13 @@ p {
     text-decoration: underline;
 }
 
+
+
+
+
+@media screen and (max-width: 450px) {
+    .navlink {
+        display: none;
+    }
+}
 
